5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_842.log
== TEST (2019-03-26 19:41:11) 
-- CODE:
#definimos a variavel do numero
a=input("a")
#agora dividimos os numeros
soma!=0
resto=a%10
c=(a-resto)//10
soma= soma+c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma!=0
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:40) 
-- CODE:
#definimos a variavel do numero
a=input("a")
#agora dividimos os numeros
while(soma!=0)
resto=a%10
c=(a-resto)//10
soma= soma+c

-- ERROR:
File "XXXX", line 4
    while(soma!=0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:45:52) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
print(pdigito)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:47:11) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
resto1=numero%1000
print(resto1)

-- OUTPUT:
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:09) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
resto1=numero%1000
#separo o segundo digito
sdigito=resto1//100
print(sdigito)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:51:16) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
resto1=numero%1000
#separo o segundo digito
sdigito=resto1//100
resto2=resto1%100
#separo o terceiro digito
tdigito=resto2//10
resto3=resto%10     #nota=se que o resto3 e o qdigito
#defino o print da soma
soma=pdigito+sdigito+tdigito+resto3
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    resto3=resto%10     #nota=se que o resto3 e o qdigito
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:51:38) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
resto1=numero%1000
#separo o segundo digito
sdigito=resto1//100
resto2=resto1%100
#separo o terceiro digito
tdigito=resto2//10
resto3=resto2%10     #nota=se que o resto3 e o qdigito
#defino o print da soma
soma=pdigito+sdigito+tdigito+resto3
print(soma)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:51:49) 
-- CODE:
#primeiros colocamos a variavel do numero
numero=int(input("numero"))
#separo o primeiro digito
pdigito=numero//1000
resto1=numero%1000
#separo o segundo digito
sdigito=resto1//100
resto2=resto1%100
#separo o terceiro digito
tdigito=resto2//10
resto3=resto2%10     #nota=se que o resto3 e o qdigito
#defino o print da soma
soma=pdigito+sdigito+tdigito+resto3
print(soma)

-- EXECUTION TIME:
0.277101
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
